--- a/CSS/Threats.css
+++ b/CSS/Threats.css
@@ -152,7 +152,9 @@ nav ul ul li a:hover {
 }
 
 .subnav2 {
-  background-color: #EFEFEF;
+  background-color: #C4C4C4;
+  font-size: 16px;
+  padding: 10px 20px;
 }
 
 @media screen and (max-width: 768px) {
@@ -185,4 +187,137 @@ nav ul ul li a:hover {
 
 .logo img {
   width: 100%;
+}
+
+/* Main styles */
+main {
+  padding: 40px;
+}
+
+.threats-info {
+  text-align: center;
+}
+
+.threats-info h1 {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
+.threats-info p {
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.threats-info ul {
+  list-style: none;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+
+.threats-info ul li {
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+.conservation-efforts {
+  margin-top: 60px;
+  text-align: center;
+}
+
+.conservation-efforts h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.conservation-efforts p {
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.conservation-efforts ul {
+  list-style: none;
+  margin-left: 20px;
+}
+
+.conservation-efforts ul li {
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+/* Footer 1*/
+.footer1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f4f4f4;
+  padding: 20px;
+}
+
+.footer1 ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer1 ul li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.footer1 ul li a {
+  color: #333;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.footer1 img {
+  max-height: 50px;
+}
+
+.footer1 .footer-right {
+  display: flex;
+  align-items: center;
+}
+
+.footer1 .footer-right ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer1 .footer-right ul li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.footer1 .footer-right ul li a {
+  color: #333;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.footer1 button {
+  padding: 10px 20px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.footer1 button:hover {
+  background-color: #666;
+}
+
+/* Footer 2 */
+.footer2 {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+  font-size: 14px;
 }
