--- a/CSS/Kosgoda.css
+++ b/CSS/Kosgoda.css
@@ -152,7 +152,9 @@ nav ul ul li a:hover {
 }
 
 .subnav2 {
-  background-color: #EFEFEF;
+  background-color: #C4C4C4;
+  font-size: 16px;
+  padding: 10px 20px;
 }
 
 @media screen and (max-width: 768px) {
@@ -216,11 +218,11 @@ main {
 }
 
 .hatchery-info img:hover {
-  transform: scale(1.05);
+  transform: scale(1.03);
 }
 
 .hatchery-info p {
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.5;
   color: #666666;
   margin-bottom: 20px;
@@ -257,4 +259,80 @@ main {
   height: 10px;
   background-color: #6c63ff;
   border-radius: 50%;
+}
+
+/* Footer 1*/
+.footer1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f4f4f4;
+  padding: 20px;
+}
+
+.footer1 ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer1 ul li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.footer1 ul li a {
+  color: #333;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.footer1 img {
+  max-height: 50px;
+}
+
+.footer1 .footer-right {
+  display: flex;
+  align-items: center;
+}
+
+.footer1 .footer-right ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer1 .footer-right ul li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.footer1 .footer-right ul li a {
+  color: #333;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.footer1 button {
+  padding: 10px 20px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.footer1 button:hover {
+  background-color: #666;
+}
+
+/* Footer 2 */
+.footer2 {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+  font-size: 14px;
 }
