--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -196,7 +196,7 @@ nav ul ul li a:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 240px 160px;
+  padding: 100px 160px;
   text-align: center;
 }
 
@@ -389,59 +389,6 @@ nav ul ul li a:hover {
   transform: scale(1.1);
 }
 
-/* Newsletter */
-.newsletter {
-  background-color: #f8f8f8;
-  padding: 40px;
-  text-align: center;
-}
-
-.newsletter h2 {
-  margin-bottom: 20px;
-  font-size: 28px;
-  font-weight: bold;
-  color: #333333;
-}
-
-.newsletter form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.newsletter label {
-  margin-bottom: 20px;
-  font-size: 18px;
-  font-weight: bold;
-  color: #666666;
-}
-
-.newsletter input[type="email"] {
-  width: 100%;
-  max-width: 400px;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  margin-bottom: 20px;
-  font-size: 16px;
-  color: #333333;
-}
-
-.newsletter button[type="submit"] {
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  background-color: #6C63FF;
-  color: #ffffff;
-  font-size: 16px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-
-.newsletter button[type="submit"]:hover {
-  background-color: #6C63FF;
-}
-
 /* Footer 1*/
 .footer1 {
   display: flex;
@@ -449,12 +396,15 @@ nav ul ul li a:hover {
   align-items: center;
   background-color: #f4f4f4;
   padding: 20px;
+  margin-top: 40px;
 }
 
 .footer1 ul {
+  display: flex;
+  flex-direction: column;
   list-style: none;
-  margin: 0;
-  padding: 0;
+  /* padding-left: 50px; */
+  align-items: left;
 }
 
 .footer1 ul li {
@@ -465,38 +415,33 @@ nav ul ul li a:hover {
 .footer1 ul li a {
   color: #333;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
 }
 
-.footer1 img {
-  max-height: 50px;
-}
-
-.footer1 .footer-right {
+.footer1 form {
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
-.footer1 .footer-right ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.footer1 form h3 {
+  margin-bottom: 10px;
 }
 
-.footer1 .footer-right ul li {
-  display: inline-block;
-  margin-right: 20px;
-}
-
-.footer1 .footer-right ul li a {
-  color: #333;
-  text-decoration: none;
-  font-size: 18px;
-}
-
-.footer1 button {
+.footer1 input[type="email"] {
+  width: 100%;
+  max-width: 400px;
   padding: 10px 20px;
-  background-color: #333;
+  border: none;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  color: #333;
+}
+
+.footer1 button[type="submit"] {
+  padding: 10px 20px;
+  background-color: #6C63FF;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -505,8 +450,22 @@ nav ul ul li a:hover {
   transition: background-color 0.3s ease;
 }
 
-.footer1 button:hover {
-  background-color: #666;
+.footer1 button[type="submit"]:hover {
+  background-color: #6C63FF;
+}
+
+.contact-us {
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.contact-us h3 {
+  margin-bottom: 15px;
+}
+
+.contact-us p {
+  font-size: 16px;
+  margin-bottom: 5px;
 }
 
 /* Footer 2 */
@@ -517,4 +476,3 @@ nav ul ul li a:hover {
   padding: 10px;
   font-size: 14px;
 }
-
