--- a/CSS/Threats.css
+++ b/CSS/Threats.css
@@ -287,12 +287,15 @@ main {
   align-items: center;
   background-color: #f4f4f4;
   padding: 20px;
+  margin-top: 40px;
 }
 
 .footer1 ul {
+  display: flex;
+  flex-direction: column;
   list-style: none;
-  margin: 0;
-  padding: 0;
+  /* padding-left: 50px; */
+  align-items: left;
 }
 
 .footer1 ul li {
@@ -303,38 +306,33 @@ main {
 .footer1 ul li a {
   color: #333;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
 }
 
-.footer1 img {
-  max-height: 50px;
-}
-
-.footer1 .footer-right {
+.footer1 form {
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
-.footer1 .footer-right ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.footer1 form h3 {
+  margin-bottom: 10px;
 }
 
-.footer1 .footer-right ul li {
-  display: inline-block;
-  margin-right: 20px;
-}
-
-.footer1 .footer-right ul li a {
-  color: #333;
-  text-decoration: none;
-  font-size: 18px;
-}
-
-.footer1 button {
+.footer1 input[type="email"] {
+  width: 100%;
+  max-width: 400px;
   padding: 10px 20px;
-  background-color: #333;
+  border: none;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  font-size: 16px;
+  color: #333;
+}
+
+.footer1 button[type="submit"] {
+  padding: 10px 20px;
+  background-color: #6C63FF;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -343,8 +341,22 @@ main {
   transition: background-color 0.3s ease;
 }
 
-.footer1 button:hover {
-  background-color: #666;
+.footer1 button[type="submit"]:hover {
+  background-color: #6C63FF;
+}
+
+.contact-us {
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.contact-us h3 {
+  margin-bottom: 15px;
+}
+
+.contact-us p {
+  font-size: 16px;
+  margin-bottom: 5px;
 }
 
 /* Footer 2 */
