--- a/CSS/Purchase and Donate.css
+++ b/CSS/Purchase and Donate.css
@@ -157,26 +157,6 @@ nav ul ul li a:hover {
   padding: 10px 20px;
 }
 
-@media screen and (max-width: 768px) {
-  nav ul {
-    flex-direction: column;
-  }
-
-  nav ul li {
-    margin-bottom: 10px;
-  }
-
-  .subnav ul {
-    position: static;
-    box-shadow: none;
-  }
-
-  .subnav ul li {
-    width: auto;
-    margin-right: 10px;
-  }
-}
-
 /* Logo styles */
 .logo {
   display: flex;
@@ -402,4 +382,71 @@ main {
   text-align: center;
   padding: 10px;
   font-size: 14px;
+}
+
+@media screen and (max-width: 768px) {
+  header {
+    flex-direction: column;
+  }
+
+  nav ul {
+    flex-direction: column;
+  }
+
+  nav ul li {
+    margin-bottom: 10px;
+  }
+
+  .subnav ul {
+    position: static;
+    box-shadow: none;
+  }
+
+  .subnav ul li {
+    width: auto;
+    margin-right: 10px;
+  }
+
+  .purchase-donate-info h1 {
+    font-size: 26px;
+  }
+
+  .purchase-donate-info p {
+    font-size: 16px;
+  }
+
+  .purchase-donate-info h2 {
+    font-size: 22px;
+  }
+
+  .purchase-donate-info label {
+    font-size: 16px;
+  }
+
+  .purchase-donate-info input[type="text"], .purchase-donate-info input[type="email"], .purchase-donate-info input[type="number"], .purchase-donate-info input[type="month"] {
+    padding: 5px;
+  }
+
+  .purchase-donate-info button[type="submit"], .purchase-donate-info button {
+    padding: 10px 20px;
+    font-size: 14px;
+  }
+
+  .product button {
+    padding: 10px 20px;
+    font-size: 14px;
+  }
+
+  .footer1 {
+    flex-direction: column;
+  }
+
+  .footer1 ul {
+    margin-bottom: 25px;
+  }
+
+  .footer1 form {
+    margin-bottom: 25px;
+  }
+
 }
