--- a/CSS/Turtle Categories.css
+++ b/CSS/Turtle Categories.css
@@ -294,6 +294,7 @@ table {
   width: 100%;
   animation: table-fade-in 0.5s ease-in-out;
   font-family: 'Roboto', sans-serif;
+  overflow-x: auto;
 }
 
 th, td {
@@ -447,5 +448,103 @@ td img {
   text-align: center;
   padding: 10px;
   font-size: 14px;
+}
+
+/* Responsive media queries */
+
+@media screen and (max-width: 768px) {
+  header {
+    flex-direction: column;
+  }
+  
+  nav ul {
+    flex-direction: column;
+  }
+
+  nav ul li {
+    margin-bottom: 10px;
+  }
+
+  .subnav ul {
+    position: static;
+    box-shadow: none;
+  }
+
+  .subnav ul li {
+    width: auto;
+    margin-right: 10px;
+  }
+
+  .hero h1 {
+    align-content: justify;
+    font-size: 26px;
+  }
+
+  .hero p {
+    font-size: 18px;
+  }
+
+  .hero {
+    padding: 1rem 1rem;
+  }
+
+  .hero button {
+    font-size: 16px;
+  }
+
+  .turtle-categories ul {
+    flex-direction: column;
+  }
+
+  .turtle-categories li {
+    width: 100%;
+    margin: 20px 0px;
+  }
+
+  .footer1 {
+    flex-direction: column;
+  }
+
+  .footer1 ul {
+    margin-bottom: 25px;
+  }
+
+  .footer1 form {
+    margin-bottom: 25px;
+  }
+
+  .hatchery {
+    margin: 20px 0px;
+  }
+
+  .turtle-categories h1 {
+    font-size: 26px;
+    margin-bottom: 10px;
+  }
+
+  .turtle-categories h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+
+  .turtle-categories p {
+    font-size: 16px;
+    margin-bottom: 10px;
+    margin-top: 0px;
+  }
+
+  .categories-hover {
+    font-size: 16px;
+  }
+  
+  table {
+    font-size: 14px;
+  }
+
+  th, td {
+    padding: 10px;
+    font-size: 14px;
+  }
+  
 }
   
