--- a/CSS/Tickets.css
+++ b/CSS/Tickets.css
@@ -104,6 +104,46 @@ button {
   width: 100%;
 }
 
+.summary-table {
+  font-family: Arial, sans-serif;
+  width: 100%;
+  max-width: 500px;
+  margin: 20px auto;
+  border-collapse: collapse;
+}
+
+.summary-table th,
+.summary-table td {
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+.summary-table th {
+  background-color: #f2f2f2;
+  text-align: left;
+}
+
+.tickets-cell {
+  font-weight: bold;
+}
+
+.charges-cell {
+  font-weight: bold;
+}
+
+/* .summary-table td {
+  text-align: center;
+} */
+
+.summary-table tr:last-child td:first-child {
+  font-weight: bold;
+}
+
+.summary-table tr:last-child td:last-child {
+  font-weight: bold;
+  background-color: #f2f2f2;
+}
+
 button:hover {
   background-color: #5248D7;
 }
@@ -118,6 +158,9 @@ ul li {
   font-size: 16px;
   margin-bottom: 5px;
 }
+
+/* Tickets */
+
 
 /* Responsive styles */
 @media screen and (max-width: 768px) {
