--- a/CSS/Tickets.css
+++ b/CSS/Tickets.css
@@ -159,8 +159,35 @@ ul li {
   margin-bottom: 5px;
 }
 
-/* Tickets */
+/* form */
+.form {
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+}
 
+h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #5248D7;
+}
+
+.form label {
+  font-size: 16px;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.form input {
+  width: 100%;
+  padding: 15px;
+  border: none;
+  background-color: #f5f5f5;
+  border-radius: 4px;
+  font-size: 16px;
+  margin-bottom: 15px;
+  color: #333;
+}
 
 /* Responsive styles */
 @media screen and (max-width: 768px) {
