--- a/CSS/Turtle Categories.css
+++ b/CSS/Turtle Categories.css
@@ -182,6 +182,8 @@ nav ul ul li a:hover {
   align-items: center;
   justify-content: center;
   width: 100px;
+  color: #6C63FF;
+  font-style: italic;
 }
   
 .logo img {
