--- a/CSS/Payments.css
+++ b/CSS/Payments.css
@@ -12,6 +12,164 @@ body {
     color: #333;
 }
 
+nav {
+    margin: 0 auto;
+    text-align: center;
+}
+
+header {
+    background-color: #1e1e1e;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+/* Navigation styles */
+nav {
+    margin: 0 auto;
+    text-align: center;
+}
+
+nav ul {
+    display: flex;
+    list-style: none;
+}
+
+nav ul li {
+    margin-right: 20px;
+    position: relative;
+}
+
+nav ul li:last-child {
+    margin-right: 0;
+}
+
+nav ul li a {
+    color: #fff;
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: none;
+    transition: all 0.3s ease;
+}
+
+nav ul li a:hover {
+    color: #6C63FF;
+}
+
+/* Subheader styles */
+nav ul ul {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    z-index: 1;
+}
+
+nav ul li:hover>ul {
+    display: flex;
+    flex-direction: column;
+}
+
+nav ul ul li {
+    width: 100%;
+    margin: 0;
+}
+
+nav ul ul li a {
+    font-size: 16px;
+    font-weight: normal;
+    padding: 10px 20px;
+}
+
+nav ul ul li a:hover {
+    background-color: #6C63FF;
+    color: #FFFFFF;
+}
+
+/* Subnav styles */
+.subnav {
+    color: #fff;
+    font-size: 18px;
+    font-weight: bold;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.subnav:hover {
+    color: #6C63FF;
+}
+
+.subnav:focus {
+    outline: none;
+}
+
+.subnav i {
+    margin-left: 5px;
+}
+
+.subnav ul {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #FFFFFF;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    z-index: 1;
+}
+
+.subnav:hover>ul {
+    display: flex;
+    flex-direction: column;
+}
+
+.subnav ul li {
+    width: 100%;
+    margin: 0;
+}
+
+.subnav ul li a {
+    font-size: 16px;
+    font-weight: normal;
+    padding: 10px 20px;
+}
+
+.subnav ul li a:hover {
+    background-color: #6C63FF;
+    color: #FFFFFF;
+}
+
+.subnav1 {
+    background-color: #C4C4C4;
+    font-size: 16px;
+    padding: 10px 20px;
+}
+
+.subnav2 {
+    background-color: #C4C4C4;
+    font-size: 16px;
+    padding: 10px 20px;
+}
+
+/* Logo styles */
+.logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    color: #6C63FF;
+    font-style: italic;
+}
+
+.logo img {
+    width: 100%;
+}
+
 /* Header*/
 .super-head {
     background-color: #6C63FF;
@@ -219,38 +377,38 @@ ul li {
     padding: 20px;
     margin-top: 40px;
     flex-wrap: wrap;
-  }
-  
-  .footer1 ul {
+}
+
+.footer1 ul {
     display: flex;
     flex-direction: column;
     list-style: none;
     /* padding-left: 50px; */
     align-items: left;
-  }
-  
-  .footer1 ul li {
+}
+
+.footer1 ul li {
     display: inline-block;
     margin-right: 20px;
-  }
-  
-  .footer1 ul li a {
+}
+
+.footer1 ul li a {
     color: #333;
     text-decoration: none;
     font-size: 16px;
-  }
-  
-  .footer1 form {
+}
+
+.footer1 form {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  
-  .footer1 form h3 {
+}
+
+.footer1 form h3 {
     margin-bottom: 10px;
-  }
-  
-  .footer1 input[type="email"] {
+}
+
+.footer1 input[type="email"] {
     width: 100%;
     max-width: 400px;
     padding: 10px 20px;
@@ -259,9 +417,9 @@ ul li {
     margin-bottom: 10px;
     font-size: 16px;
     color: #333;
-  }
-  
-  .footer1 button[type="submit"] {
+}
+
+.footer1 button[type="submit"] {
     padding: 10px 20px;
     background-color: #6C63FF;
     color: #fff;
@@ -270,34 +428,34 @@ ul li {
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-  }
-  
-  .footer1 button[type="submit"]:hover {
+}
+
+.footer1 button[type="submit"]:hover {
     background-color: #6C63FF;
-  }
-  
-  .contact-us {
+}
+
+.contact-us {
     text-align: left;
     margin-bottom: 20px;
-  }
-  
-  .contact-us h3 {
+}
+
+.contact-us h3 {
     margin-bottom: 15px;
-  }
-  
-  .contact-us p {
+}
+
+.contact-us p {
     font-size: 16px;
     margin-bottom: 5px;
-  }
-  
-  /* Footer 2 */
-  .footer2 {
+}
+
+/* Footer 2 */
+.footer2 {
     background-color: #333;
     color: #fff;
     text-align: center;
     padding: 10px;
     font-size: 14px;
-  }
+}
 
 /* Responsive styles */
 @media screen and (max-width: 768px) {
@@ -308,4 +466,68 @@ ul li {
     main {
         padding: 10px;
     }
+}
+
+/* Responsive media queries */
+
+@media screen and (max-width: 768px) {
+    header {
+        flex-direction: column;
+    }
+
+    nav ul {
+        flex-direction: column;
+    }
+
+    nav ul li {
+        margin-bottom: 10px;
+    }
+
+    .subnav ul {
+        position: static;
+        box-shadow: none;
+    }
+
+    .subnav ul li {
+        width: auto;
+        margin-right: 10px;
+    }
+
+    .hatchery {
+        width: 100%;
+    }
+
+    .hatchery {
+        margin: 20px 0px;
+    }
+
+    .super-head h1 {
+        align-content: justify;
+        font-size: 26px;
+    }
+
+    .super-head p {
+        font-size: 18px;
+    }
+
+    .super-head {
+        padding: 1rem 1rem;
+    }
+
+    .super-head button {
+        font-size: 16px;
+    }
+
+    .footer1 {
+        flex-direction: column;
+    }
+
+    .footer1 ul {
+        margin-bottom: 25px;
+    }
+
+    .footer1 form {
+        margin-bottom: 25px;
+    }
+
 }
